--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "dotenv": "^8.2.0",
+    "gsap": "^3.5.1",
+    "normalize.css": "^8.0.1",
+    "nuxt": "^2.14.6",
+    "stripe": "^8.117.0",
+    "uuid": "^8.3.1",
+    "vue-star-rating": "^1.7.0",
+    "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0"
